Fixed border buttons not appearing, fixed flex gaps on info page to be a little more appealing

--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ header {
   flex: 1;
   align-items: center;
   justify-content: space-evenly;
+  gap: 25px;
 }
 
 .info-border-countries{
